Adding Navigation HTML Structure
Adding the HTML Structure for the links to the various parts of the website as well as the button to donate

--- a/Website/index.html
+++ b/Website/index.html
@@ -19,8 +19,18 @@
                 </div>
 
                 <!-- Re-directs to section of webpage -->
-                <div class="pageLink">
+                <ul class="pageLink">
+                    <!-- About the campaign -->
+                    <li></li>
+                    <!-- How it works -->
+                    <li></li>
+                </ul>
 
+                <div class="donate-button">
+                    <ul>
+                        <!-- Donate Now Button -->
+                        <li></li>
+                    </ul>
                 </div>
             </nav>
 
