Added attributes to video tag

--- a/Website/index.html
+++ b/Website/index.html
@@ -37,7 +37,7 @@
             <!-- About the campaign -->
             <div class="about">
                 <!-- Promotional Video -->
-                <video src=""></video>
+                <video src=""  autoplay="" controls="" loop="" muted="muted"></video>
 
                 <!-- Title, company logo and info about campaign -->
                 <header>
