Added img tag + Filled in links
Added the img tag to the logo div of the navigation bar. I also filled in the names of the links that will be used to redirect the website to a specific part of the page

--- a/Website/index.html
+++ b/Website/index.html
@@ -15,21 +15,23 @@
             <nav>
                 <!-- Logo -->
                 <div class="logo">
-
+                    <img src="" alt="">
                 </div>
 
                 <!-- Re-directs to section of webpage -->
                 <ul class="pageLink">
                     <!-- About the campaign -->
-                    <li></li>
+                    <li>About the campaign</li>
                     <!-- How it works -->
-                    <li></li>
+                    <li>How it works</li>
                 </ul>
 
                 <div class="donate-button">
                     <ul>
                         <!-- Donate Now Button -->
-                        <li></li>
+                        <li>
+                            <button>Donate</button>
+                        </li>
                     </ul>
                 </div>
             </nav>
