Added text to about section
Added some text to the about section of the website

--- a/Website/index.html
+++ b/Website/index.html
@@ -43,9 +43,10 @@
 
                 <!-- Title, company logo and info about campaign -->
                 <header>
-                    <h1></h1>
+                    <h1>Alone to be Together Campaign</h1>
+                    <h2>#A2G</h2>
                     <div class="companyLogo"></div>
-                    <p></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, hic eos. Atque quae dolores praesentium non et animi natus repudiandae fugit eaque vitae! Sint nihil rem ut facilis ex numquam.</p>
                 </header>
             </div>
 
