Added text to 'How it works' section
Added some text and HTML Structure to the how it works section of the website

--- a/Website/index.html
+++ b/Website/index.html
@@ -52,9 +52,35 @@
 
             <!-- Process of participating in the campaign -->
             <div class="how-it-works">
-                <div class="steps"></div>
-                <div class="steps"></div>
-                <div class="steps"></div>
+                <div class="steps">
+                    <div class="left-contents">
+                        <img src="" alt="">
+                    </div>
+                    <div class="right-contents">
+                        <h3>Step </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum unde natus deserunt necessitatibus, in aut voluptate quasi fuga labore quaerat hic recusandae dolorum cupiditate nobis facilis voluptatibus, doloribus at enim?</p>
+                    </div>
+                </div>
+
+                <div class="steps">
+                    <div class="left-contents">
+                        <h3>Step </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum unde natus deserunt necessitatibus, in aut voluptate quasi fuga labore quaerat hic recusandae dolorum cupiditate nobis facilis voluptatibus, doloribus at enim?</p>
+                    </div>
+                    <div class="right-contents">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                    
+                <div class="steps">
+                    <div class="left-contents">
+                        <img src="" alt="">
+                    </div>
+                    <div class="right-contents">
+                        <h3>Step </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum unde natus deserunt necessitatibus, in aut voluptate quasi fuga labore quaerat hic recusandae dolorum cupiditate nobis facilis voluptatibus, doloribus at enim?</p>
+                    </div>
+                </div>
             </div>
             
             <!-- Donation Form -->
