Added text to footer
Added text and HTML Structure to the footer of the website

--- a/Website/index.html
+++ b/Website/index.html
@@ -121,10 +121,13 @@
             <!-- Footer -->
             <footer>
                 <!-- FishingTAG Logo -->
-                <div class="footerLogo"></div>
+                <div class="footerLogo">
+                    <img src="" alt="">
+                </div>
                 
                 <!-- Copyright Information -->
-                <p></p>
+                <p>Copyright © 2021 all rights reserved</p>
+                <p>www.fishingtag.com</p>
             </footer>
         </div>
     </body>
