--- a/Website/index.html
+++ b/Website/index.html
@@ -13,26 +13,28 @@
         <div class="main-content">
             <!-- Header -->
             <nav>
-                <!-- Logo -->
-                <div class="logo">
-                    <img src="" alt="">
-                </div>
+                <div class="wrapper nav_container">
+                    <!-- Logo -->
+                    <div class="logo">
+                        <img src="" alt="">
+                    </div>
 
-                <!-- Re-directs to section of webpage -->
-                <ul class="pageLink">
-                    <!-- About the campaign -->
-                    <li>About the campaign</li>
-                    <!-- How it works -->
-                    <li>How it works</li>
-                </ul>
-
-                <div class="donate-button">
-                    <ul>
-                        <!-- Donate Now Button -->
-                        <li>
-                            <button>Donate</button>
-                        </li>
+                    <!-- Re-directs to section of webpage -->
+                    <ul class="pageLink">
+                        <!-- About the campaign -->
+                        <li>About the campaign</li>
+                        <!-- How it works -->
+                        <li>How it works</li>
                     </ul>
+
+                    <div class="donate-button">
+                        <ul>
+                            <!-- Donate Now Button -->
+                            <li>
+                                <button>Donate</button>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </nav>
 
