Add company logo
Added FishingTAG and sponsoring company logo placeholder

--- a/Website/index.html
+++ b/Website/index.html
@@ -17,7 +17,7 @@
                 <div class="wrapper nav_container">
                     <!-- Logo -->
                     <div class="logo">
-                        <img src="" alt="">
+                        <img src="Assets/Images/navLogo.jpg" alt="">
                     </div>
 
                     <!-- Re-directs to section of webpage -->
@@ -48,7 +48,9 @@
                 <header>
                     <h1>Alone to be Together Campaign</h1>
                     <h2>#A2G</h2>
-                    <div class="companyLogo"></div>
+                    <div class="companyLogo">
+                        <img src="Assets/Images/displayLogo.jpg" alt="">
+                        <img src="Assets/Images/displayLogo.jpg" alt="">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, excepturi explicabo quasi quas dolorum error et ex quod, itaque totam doloribus fugit autem. Voluptates neque distinctio tempora suscipit iste natus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, facilis! Vel officiis consequuntur perspiciatis corrupti ratione optio tempora deleniti? Officiis nemo voluptates quibusdam quis. Iste at eius aperiam doloremque maxime. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, hic eos. Atque quae dolores praesentium non et animi natus repudiandae fugit eaque vitae! Sint nihil rem ut facilis ex numquam.</p>
                 </header>
             </div>
