Add FIshignTAG logo placeholder
Added FishingTAG and sponsoring company logo placeholder

--- a/Website/index.html
+++ b/Website/index.html
@@ -51,6 +51,7 @@
                     <div class="companyLogo">
                         <img src="Assets/Images/displayLogo.jpg" alt="">
                         <img src="Assets/Images/displayLogo.jpg" alt="">
+                    </div>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, excepturi explicabo quasi quas dolorum error et ex quod, itaque totam doloribus fugit autem. Voluptates neque distinctio tempora suscipit iste natus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, facilis! Vel officiis consequuntur perspiciatis corrupti ratione optio tempora deleniti? Officiis nemo voluptates quibusdam quis. Iste at eius aperiam doloremque maxime. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, hic eos. Atque quae dolores praesentium non et animi natus repudiandae fugit eaque vitae! Sint nihil rem ut facilis ex numquam.</p>
                 </header>
             </div>
@@ -143,7 +144,7 @@
             <footer>
                 <!-- FishingTAG Logo -->
                 <div class="footerLogo">
-                    <img src="" alt="">
+                    <img src="Assets/Images/displayLogo.jpg" alt="">
                 </div>
                 
                 <!-- Copyright Information -->
