Re-arrange nav structure
Re-arranged the nav bar so that the donate button is included in the pageLink class as opposed to the donate-button class

--- a/Website/index.html
+++ b/Website/index.html
@@ -23,19 +23,14 @@
                     <!-- Re-directs to section of webpage -->
                     <ul class="pageLink">
                         <!-- About the campaign -->
-                        <li>About the campaign</li>
+                        <li><a href="#">About the campaign</a></li>
                         <!-- How it works -->
-                        <li>How it works</li>
+                        <li><a href="#">How it works</a></li>
+                        <!-- Donate Now Button -->
+                        <li>
+                            <button><a href="">Donate</a></button>
+                        </li>
                     </ul>
-
-                    <div class="donate-button">
-                        <ul>
-                            <!-- Donate Now Button -->
-                            <li>
-                                <button>Donate</button>
-                            </li>
-                        </ul>
-                    </div>
                 </div>
             </nav>
 
