--- a/Website/index.html
+++ b/Website/index.html
@@ -124,12 +124,11 @@
                             <img alt="" border="0" src="https://www.paypal.com/en_KR/i/scr/pixel.gif" width="1" height="1" />
                         </form> -->
 
-                        <form action="https://www.paypal.com/donate" method="post" target="_top">
-                            <input type="hidden" name="hosted_button_id" value="R6MHZQYNQ4NZ6" />
+                        <form action="https://www.sandbox.paypal.com/donate" method="post" target="_top">
+                            <input type="hidden" name="hosted_button_id" value="7UENJHWANEL5U" />
                             <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-                            <img alt="" border="0" src="https://www.paypal.com/en_KR/i/scr/pixel.gif" width="1" height="1" />
-                        </form>
-                            
+                            <img alt="" border="0" src="https://www.sandbox.paypal.com/en_KR/i/scr/pixel.gif" width="1" height="1" />
+                        </form>  
                         <!-- <button id="dfb"><a id="dfbText" href="">Donate</a></button> -->
                     </div>
                 </div>
